--- a/Config.properties
+++ b/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a01k5nwp86vfhp7v
-app42.paas.db.port = 57359
-app42.paas.db.password = fm29jaw9zun55n41t4a0nu6k674un5e1
-app42.paas.db.ip = 10.0.2.12
+app42.paas.db.username = a7xsmeec37z73p0l
+app42.paas.db.port = 3923
+app42.paas.db.password = vwmrvun4jo5jq3aegesuut29vtvvqdxh
+app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
