--- a/Config.properties
+++ b/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a7xsmeec37z73p0l
-app42.paas.db.port = 3923
-app42.paas.db.password = vwmrvun4jo5jq3aegesuut29vtvvqdxh
-app42.paas.db.ip = 172.16.2.167
+app42.paas.db.username = aw7b6v9v8tofh6ta
+app42.paas.db.port = 58999
+app42.paas.db.password = a2vdqv1v98rmy35b1yyx3m4gtvdeui3g
+app42.paas.db.ip = 192.168.2.202
 app42.paas.db.name = t
